--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-
   <title>Главная</title>
   <link href="css/style.css" rel="stylesheet">
   <link href="img/favicon.ico" rel="shortcut icon">
@@ -13,7 +11,6 @@
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="js/script.js"></script>
 </head>
-
 <body>
   <header>
     <nav>
@@ -22,253 +19,223 @@
           <li>
             <a href="#">Главная</a>
           </li>
-
           <li>
             <a href="#">Как покупать</a>
           </li>
-
           <li>
             <a href="#">Гарантии</a>
           </li>
-
           <li>
             <a href="#">Контакты</a>
           </li>
-
           <li>
             <a href="#">О компании</a>
           </li>
         </ul><button class="button">Подать объявление</button>
       </div>
     </nav>
-
     <div class="wrapper">
       <div class="cover">
         <div class="logo">
           <a href="#"><img alt="" src="img/logo.png">
-
-          <hgroup>
-            <h1>Монеты+</h1>
-
-            <h2>Нумизматический клуб</h2>
-          </hgroup></a>
-        </div>
-
-        <div class="last">
-          <p class="title">Последние объявления</p>
-
-          <ul>
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-1.jpg"></div>
-
-              <p>Флорин Эдварда III</p></a>
-            </li>
-
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-2.jpg"></div>
-
-              <p>Двойной орел</p></a>
-            </li>
-
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-3.jpg"></div>
-
-              <p>Юбилейный доллар</p></a>
-            </li>
-
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-1.jpg"></div>
-
-              <p>Флорин Эдварда III</p></a>
-            </li>
-
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-2.jpg"></div>
-
-              <p>Двойной орел</p></a>
-            </li>
-
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-3.jpg"></div>
-
-              <p>Юбилейный доллар</p></a>
-            </li>
-
-            <li>
-              <a href="item.html">
-              <div><img alt="" src="img-1.jpg"></div>
-
-              <p>Флорин Эдварда III</p></a>
-            </li>
-          </ul>
-
-          <div class="prev"></div>
-
-          <div class="next"></div>
+            <hgroup>
+              <h1>Монеты+</h1>
+              <h2>Нумизматический клуб</h2>
+            </hgroup></a>
+          </div>
+          <div class="last">
+            <p class="title">Последние объявления</p>
+            <ul>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-1.jpg"></div>
+                  <p>Флорин Эдварда III</p>
+                </a>
+              </li>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-2.jpg"></div>
+                  <p>Двойной орел</p>
+                </a>
+              </li>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-3.jpg"></div>
+                  <p>Юбилейный доллар</p>
+                </a>
+              </li>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-1.jpg"></div>
+                  <p>Флорин Эдварда III</p>
+                </a>
+              </li>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-2.jpg"></div>
+                  <p>Двойной орел</p>
+                </a>
+              </li>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-3.jpg"></div>
+                  <p>Юбилейный доллар</p>
+                </a>
+              </li>
+              <li>
+                <a href="item.html">
+                  <div><img alt="" src="img-1.jpg"></div>
+                  <p>Флорин Эдварда III</p>
+                </a>
+              </li>
+            </ul>
+            <div class="prev"></div>
+            <div class="next"></div>
+          </div>
         </div>
       </div>
-    </div>
-  </header>
-
-  <div class="wrapper">
-    <div class="content">
-      <aside>
-        <p class="title">Категории</p>
-
-        <div style="margin-left: 2em">
-          <ul>
-            <li>
-              <div class="checkbox"></div><span>70 лет Победы</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>ГВС</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Древние города России</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Жетоны, копии и прочее</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Олимпиада в Сочи 2014 г.</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Первая мировая война</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Российская федерация</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Россия 1997 - н.в. -
-              разное</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>США</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Юбилейные</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Страны СНГ</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Монеты СССР</span>
-            </li>
-
-            <li>
-              <div class="checkbox"></div><span>Все категории</span>
-            </li>
-          </ul>
-        </div>
-      </aside>
-
-      <section class="items">
-        <div class="panel">
-          <div class="search">
-            <input type="text"> <input type="text"> <input type="text">
+    </header>
+    <div class="wrapper">
+      <div class="content">
+        <aside>
+          <p class="title">Категории</p>
+          <div style="margin-left: 2em">
+            <ul>
+              <li>
+                <div class="checkbox"></div><span>70 лет Победы</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>ГВС</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Древние города России</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Жетоны, копии и прочее</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Олимпиада в Сочи 2014 г.</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Первая мировая война</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Российская федерация</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Россия 1997 - н.в. -
+                разное</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>США</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Юбилейные</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Страны СНГ</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Монеты СССР</span>
+              </li>
+              <li>
+                <div class="checkbox"></div><span>Все категории</span>
+              </li>
+            </ul>
           </div>
-
-          <div class="filter">
-            <input type="text"> <span>Товаров на странице</span> <input type=
-            "text">
-          </div>
-        </div>
-
-        <article class="item">
-          <div class="img"><img alt="" src="img-6.jpg"></div>
-
-          <div class="info">
-            <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-
-            <p class="price">137 932 <span>Р</span></p>
-
-            <div class="stars">
-              <span></span> <span></span> <span></span> <span></span>
-              <span></span>
+        </aside>
+        <section class="items">
+          <div class="panel">
+            <div class="search">
+              <input type="text"> <input type="text"> <input type="text">
+            </div>
+            <div class="filter">
+              <input type="text"> <span>Товаров на странице</span> <input type=
+              "text">
             </div>
           </div>
-        </article>
-      </section>
-    </div>
-
-    <footer>
-      <nav>
-        <ul>
-          <li>
-            <a href="#">Главная</a>
-          </li>
-
-          <li>
-            <a href="#">Как покупать</a>
-          </li>
-
-          <li>
-            <a href="#">Гарантии</a>
-          </li>
-
-          <li>
-            <a href="#">Контакты</a>
-          </li>
-
-          <li>
-            <a href="#">О компании</a>
-          </li>
-
-          <li>
-            <a href="#">Пользовательское соглашение</a>
-          </li>
-        </ul>
-      </nav>
-
-      <div class="soc">
-        <ul>
-          <li>
-            <a href="#"></a>
-          </li>
-
-          <li>
-            <a href="#"></a>
-          </li>
-
-          <li>
-            <a href="#"></a>
-          </li>
-
-          <li>
-            <a href="#"></a>
-          </li>
-        </ul>
+          <article class="item">
+            <div class="img"><img alt="" src="img-6.jpg"></div>
+            <div class="info">
+              <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
+              <p class="price">137 932 <span>Р</span></p>
+              <div class="stars">
+                <span></span><span></span><span></span><span></span><span></span>
+              </div>
+            </div>
+          </article>
+        </section>
       </div>
-
-      <p class="copy">&copy; Монеты+, Все права защищены</p>
-    </footer>
-  </div>
-
-  <div class="shadow">
-    <form action="send.php" method="post">
-      <input name="name" placeholder="Введите имя" type="text"> <input name=
-      "phone" placeholder="Введите номер" type="text"> <input type="submit"
-      value="Заказать">
-
-      <div class="cancel"></div>
+      <footer>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Главная</a>
+            </li>
+            <li>
+              <a href="#">Как покупать</a>
+            </li>
+            <li>
+              <a href="#">Гарантии</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+            <li>
+              <a href="#">О компании</a>
+            </li>
+            <li>
+              <a href="#">Пользовательское соглашение</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="soc">
+          <ul>
+            <li>
+              <a href="#"></a>
+            </li>
+            <li>
+              <a href="#"></a>
+            </li>
+            <li>
+              <a href="#"></a>
+            </li>
+            <li>
+              <a href="#"></a>
+            </li>
+          </ul>
+        </div>
+        <p class="copy">&copy; Монеты+, Все права защищены</p>
+      </footer>
+    </div>
+    <div class="shadow">
+      <div class="modal">
+       <div class="title">
+        <span>Войти</span>
+        <a href="#">Зарегистрироваться</a>
+      </div>
+      <form method="post">
+        <input type="text" name="mail" placeholder="username@mail.com">
+        <input type="password" name="password" placeholder="">
+        <label>
+         <input type="checkbox">
+         <span>Запомнить меня</span>
+       </label>
+       <input type="submit" value="Войти">
+     </form>
+   </div>
+   <div class="modal">
+     <div class="title">
+      <span>РЕГЕСТРАЦИЯ</span>
+      <a href="#">Уже есть аккаунт</a>
+    </div>
+    <form method="post">
+      <input type="text" name="mail" placeholder="username@mail.com">
+      <input type="password" name="password" placeholder="">
+      <input class="reg" type="submit" value="Зарегистрироваться">
     </form>
   </div>
+</div>
+</div>
 </body>
 </html>
