--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -215,8 +215,8 @@
         <a href="#">Зарегистрироваться</a>
       </div>
       <form method="post">
-        <input type="text" name="mail" placeholder="username@mail.com">
-        <input type="password" name="password" placeholder="">
+        <input type="text" name="mail" placeholder="Электронная почта">
+        <input type="password" name="password" placeholder="Пароль">
         <label>
          <input type="checkbox">
          <span>Запомнить меня</span>
@@ -226,12 +226,12 @@
    </div>
    <div class="modal">
      <div class="title">
-      <span>РЕГЕСТРАЦИЯ</span>
+      <span>РЕГИСТРАЦИЯ</span>
       <a href="#">Уже есть аккаунт</a>
     </div>
     <form method="post">
-      <input type="text" name="mail" placeholder="username@mail.com">
-      <input type="password" name="password" placeholder="">
+      <input type="text" name="mail" placeholder="Электронная почта">
+      <input type="password" name="password" placeholder="Пароль">
       <input class="reg" type="submit" value="Зарегистрироваться">
     </form>
   </div>
