--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -102,7 +102,7 @@
           <div style="margin-left: 2em">
             <ul>
               <li>
-                <label><input type="checkbox" name=""><span>70 лет Победы</span></label>
+                <label class="checkbox"><input type="checkbox" name=""><span>70 лет Победы</span></label>
               </li>
               <li>
                 <div class="checkbox"></div><span>ГВС</span>
