--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -99,50 +99,50 @@
       <div class="content">
         <aside>
           <p class="title">Категории</p>
-          <div style="margin-left: 2em">
+          <menu>
             <ul>
               <li>
                 <label class="checkbox"><input type="checkbox" name=""><span>70 лет Победы</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>ГВС</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>ГВС</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Древние города России</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Древние города России</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Жетоны, копии и прочее</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Жетоны, копии и прочее</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Олимпиада в Сочи 2014 г.</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Олимпиада в Сочи 2014 г.</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Первая мировая война</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Первая мировая война</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Российская федерация</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Российская федерация</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Россия 1997 - н.в. -
-                разное</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Россия 1997 - н.в. -
+                разное</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>США</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>США</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Юбилейные</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Юбилейные</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Страны СНГ</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Страны СНГ</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Монеты СССР</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Монеты СССР</span></label>
               </li>
               <li>
-                <div class="checkbox"></div><span>Все категории</span>
+                <label class="checkbox"><input type="checkbox" name=""><span>Все категории</span></label>
               </li>
             </ul>
-          </div>
+          </menu>
         </aside>
         <section class="items">
           <div class="panel">
