--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -217,8 +217,8 @@
       <form method="post">
         <input type="text" name="mail" placeholder="Электронная почта">
         <input type="password" name="password" placeholder="Пароль">
-        <label>
-         <input type="checkbox">
+        <label class="checkbox">
+         <input	type="checkbox">
          <span>Запомнить меня</span>
        </label>
        <input type="submit" value="Войти">
