--- a/numismatists/page.html
+++ b/numismatists/page.html
@@ -17,19 +17,19 @@
       <div class="wrapper">
         <ul>
           <li>
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li>
-            <a href="#">Как покупать</a>
+            <a href="page.html">Как покупать</a>
           </li>
           <li>
-            <a href="#">Гарантии</a>
+            <a href="page.html">Гарантии</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="page.html">Контакты</a>
           </li>
           <li>
-            <a href="#">О компании</a>
+            <a href="page.html">О компании</a>
           </li>
         </ul><button class="button">Подать объявление</button>
       </div>
@@ -37,7 +37,7 @@
     <div class="wrapper">
       <div class="cover">
         <div class="logo">
-          <a href="#"><img alt="" src="img/logo.png">
+          <a href="index.html"><img alt="" src="img/logo.png">
             <hgroup>
               <h1>Монеты+</h1>
               <h2>Нумизматический клуб</h2>
