--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -17,19 +17,19 @@
       <div class="wrapper">
         <ul>
           <li>
-            <a href="#">Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li>
-            <a href="#">Как покупать</a>
+            <a href="page.html">Как покупать</a>
           </li>
           <li>
-            <a href="#">Гарантии</a>
+            <a href="page.html">Гарантии</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="page.html">Контакты</a>
           </li>
           <li>
-            <a href="#">О компании</a>
+            <a href="page.html">О компании</a>
           </li>
         </ul><button class="button">Подать объявление</button>
       </div>
@@ -37,7 +37,7 @@
     <div class="wrapper">
       <div class="cover">
         <div class="logo">
-          <a href="#"><img alt="" src="img/logo.png">
+          <a href="index.html"><img alt="" src="img/logo.png">
             <hgroup>
               <h1>Монеты+</h1>
               <h2>Нумизматический клуб</h2>
@@ -154,15 +154,22 @@
               <input type="submit" value="Найти">
             </form>
             <div class="sort">
-              <input type="text"> <span>Товаров на странице</span> <input type=
-              "text">
+            	<select name="" id="">
+            		<option disabled>Сотрировка по цене</option>
+            	</select>
+            	<div class="count">
+            		<span>Товаров на странице</span> 
+            		<select name="" id="">
+            			<option disabled>5</option>
+            		</select>
+            	</div>
             </div>
           </div>
           <article class="item">
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>Р</span></p>
+              <p class="price">137 932 <span>&#8399;</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -172,7 +179,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>Р</span></p>
+              <p class="price">137 932 <span>&#8399;</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -182,7 +189,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>Р</span></p>
+              <p class="price">137 932 <span>&#8399;</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -192,7 +199,7 @@
             <div class="img"><img alt="" src="img-6.jpg"></div>
             <div class="info">
               <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
-              <p class="price">137 932 <span>Р</span></p>
+              <p class="price">137 932 <span>&#8399;</span></p>
               <div class="stars">
                 <span></span><span></span><span></span><span></span><span></span>
               </div>
@@ -217,22 +224,22 @@
         <nav>
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="page.html">Главная</a>
             </li>
             <li>
-              <a href="#">Как покупать</a>
+              <a href="page.html">Как покупать</a>
             </li>
             <li>
-              <a href="#">Гарантии</a>
+              <a href="page.html">Гарантии</a>
             </li>
             <li>
-              <a href="#">Контакты</a>
+              <a href="page.html">Контакты</a>
             </li>
             <li>
-              <a href="#">О компании</a>
+              <a href="page.html">О компании</a>
             </li>
             <li>
-              <a href="#">Пользовательское соглашение</a>
+              <a href="page.html">Пользовательское соглашение</a>
             </li>
           </ul>
         </nav>
@@ -255,34 +262,6 @@
         <p class="copy">&copy; Монеты+, Все права защищены</p>
       </footer>
     </div>
-    <div class="shadow">
-      <div class="modal">
-       <div class="title">
-        <span>Войти</span>
-        <a href="#">Зарегистрироваться</a>
-      </div>
-      <form method="post">
-        <input type="text" name="mail" placeholder="Электронная почта">
-        <input type="password" name="password" placeholder="Пароль">
-        <label class="checkbox">
-         <input	type="checkbox">
-         <span>Запомнить меня</span>
-       </label>
-       <input type="submit" value="Войти">
-     </form>
-   </div>
-   <div class="modal">
-     <div class="title">
-      <span>РЕГИСТРАЦИЯ</span>
-      <a href="#">Уже есть аккаунт</a>
-    </div>
-    <form method="post">
-      <input type="text" name="mail" placeholder="Электронная почта">
-      <input type="password" name="password" placeholder="Пароль">
-      <input class="reg" type="submit" value="Зарегистрироваться">
-    </form>
   </div>
-</div>
-</div>
 </body>
 </html>
