--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -158,7 +158,7 @@
             		<option disabled>Сотрировка по цене</option>
             	</select>
             	<div class="count">
-            		<span>Товаров на странице</span> 
+            		<span>Товаров на странице:</span> 
             		<select name="" id="">
             			<option disabled>5</option>
             		</select>
