index select fix

--- a/numismatists/index.html
+++ b/numismatists/index.html
@@ -149,18 +149,27 @@
             <form class="search">
               <input type="text" placeholder="Поиск"> 
               <select name="" id="">
-              	<option disabled>Любая категория</option>
+              	<option>Любая категория</option>
+                <option>70 лет Победы</option>
+                <option>ГВС</option>
+                <option>Древние города России</option>
+                <option>Жетоны, копии и прочее</option>
               </select> 
               <input type="submit" value="Найти">
             </form>
             <div class="sort">
             	<select name="" id="">
-            		<option disabled>Сотрировка по цене</option>
+            		<option>Сотрировка по цене</option>
+                <option>Сотрировка по имени</option>
+                <option>Сотрировка по рейтингу</option>
             	</select>
             	<div class="count">
             		<span>Товаров на странице:</span> 
             		<select name="" id="">
-            			<option disabled>5</option>
+                  <option>5</option>
+                  <option>10</option>
+                  <option>15</option>
+                  <option>20</option>
             		</select>
             	</div>
             </div>
