--- a/numismatists/item.html
+++ b/numismatists/item.html
@@ -37,7 +37,7 @@
     <div class="wrapper">
       <div class="cover">
         <div class="logo">
-          <a href="index.html"><img alt="" src="img/logo.png">
+          <a href="index.html"><img src="img/logo.png">
             <hgroup>
               <h1>Монеты+</h1>
               <h2>Нумизматический клуб</h2>
@@ -48,43 +48,43 @@
             <ul>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-1.jpg"></div>
+                  <div><img src="img-1.jpg"></div>
                   <p>Флорин Эдварда III</p>
                 </a>
               </li>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-2.jpg"></div>
+                  <div><img src="img-2.jpg"></div>
                   <p>Двойной орел</p>
                 </a>
               </li>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-3.jpg"></div>
+                  <div><img src="img-3.jpg"></div>
                   <p>Юбилейный доллар</p>
                 </a>
               </li>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-1.jpg"></div>
+                  <div><img src="img-1.jpg"></div>
                   <p>Флорин Эдварда III</p>
                 </a>
               </li>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-2.jpg"></div>
+                  <div><img src="img-2.jpg"></div>
                   <p>Двойной орел</p>
                 </a>
               </li>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-3.jpg"></div>
+                  <div><img src="img-3.jpg"></div>
                   <p>Юбилейный доллар</p>
                 </a>
               </li>
               <li>
                 <a href="item.html">
-                  <div><img alt="" src="img-1.jpg"></div>
+                  <div><img src="img-1.jpg"></div>
                   <p>Флорин Эдварда III</p>
                 </a>
               </li>
@@ -152,9 +152,18 @@
             </div>
 
             <article class="item">
-              <div class="img"><img alt="" src="img-6.jpg"></div>
+              <div class="img">
+                <img src="img-6.jpg">
+                <div class="preview">
+                  <ul>
+                    <li><img src="img-1.jpg"></li>
+                    <li><img src="img-2.jpg"></li>
+                    <li><img src="img-3.jpg"></li>
+                  </ul>
+                </div>
+              </div>
               <div class="info">
-                <p class="title">1 рубль 1705 года («Польский талер»)</p>
+                <p class="title">1 рубль 1705 года («Польский талер») <b>(а тут от класа item в section-e отталкивайся)</b></p>
                 <p class="desc">После денежной реформы 1755 года в сферу обращения была выпущена золотая монета с новым номиналом 20 рублей.</p>
                 <p class="price">137 932 <span>&#8399;</span></p>
                 <div class="stars">
@@ -168,19 +177,66 @@
               </div>
             </article>
 
-            <div class="navigation">
-              <a href="#" class="prev">Назад</a>
-              <div class="pages">
-                <a href="#">1</a>
-                <a class="active" href="#">2</a>
-                <a href="#">3</a>
-                <span>...</span>
-                <a href="#">12</a>
-                <a href="#">13</a>
-                <a href="#">14</a>
-              </div>
-              <a href="#" class="next">Вперед</a>
+            <div class="last popular">
+            <p class="title">Популярные товары (через класс popular перебивай стили)</p>
+              <ul>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-1.jpg"></div>
+                    <p>Флорин Эдварда III</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-2.jpg"></div>
+                    <p>Двойной орел</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-3.jpg"></div>
+                    <p>Юбилейный доллар</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-1.jpg"></div>
+                    <p>Флорин Эдварда III</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-2.jpg"></div>
+                    <p>Двойной орел</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-3.jpg"></div>
+                    <p>Юбилейный доллар</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-1.jpg"></div>
+                    <p>Флорин Эдварда III</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-2.jpg"></div>
+                    <p>Двойной орел</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="item.html">
+                    <div><img src="img-3.jpg"></div>
+                    <p>Юбилейный доллар</p>
+                  </a>
+                </li>
+              </ul>
             </div>
+
           </section>
         </div>
         <footer>
