item/without img

--- a/numismatists/item.html
+++ b/numismatists/item.html
@@ -153,7 +153,9 @@
 
             <article class="item">
               <div class="img">
-                <img src="img-6.jpg">
+                <div class="img">
+                	<img src="img-6.jpg">
+                </div>
                 <div class="preview">
                   <ul>
                     <li><img src="img-1.jpg"></li>
@@ -163,7 +165,7 @@
                 </div>
               </div>
               <div class="info">
-                <p class="title">1 рубль 1705 года («Польский талер») <b>(а тут от класа item в section-e отталкивайся)</b></p>
+                <p class="title">1 рубль 1705 года («Польский талер»)</p>
                 <p class="desc">После денежной реформы 1755 года в сферу обращения была выпущена золотая монета с новым номиналом 20 рублей.</p>
                 <p class="price">137 932 <span>&#8399;</span></p>
                 <div class="stars">
@@ -171,14 +173,14 @@
                 </div>
                 <form class="buy">
                   <p>Хочу преобрести</p>
-                  <input type="text"> 
-                  <input type="submit">
+                  <input type="text" placeholder="10 штук"> 
+                  <input type="submit" value="ок">
                 </form>
               </div>
             </article>
 
             <div class="last popular">
-            <p class="title">Популярные товары (через класс popular перебивай стили)</p>
+            <p class="title">Популярные товары</p>
               <ul>
                 <li>
                   <a href="item.html">
