--- a/numismatists/settings.html
+++ b/numismatists/settings.html
@@ -96,7 +96,7 @@
       </div>
     </header>
     <div class="wrapper">
-      <div class="content page settings">
+      <div class="content profile settings">
         <aside>
           <menu>
             <ul>
@@ -133,7 +133,7 @@
             </div>
             <div class="row">
               <span>Уведомления</span>
-              <input type="text">
+              div.
             </div>
             <div class="row">
               <span>Новости сайта</span>
