settings add toggle

--- a/numismatists/settings.html
+++ b/numismatists/settings.html
@@ -133,11 +133,11 @@
             </div>
             <div class="row">
               <span>Уведомления</span>
-              div.
+              <div class="toggle-switcher"><span></span></div>
             </div>
             <div class="row">
               <span>Новости сайта</span>
-              <input type="text">
+              <div class="toggle-switcher active"><span></span></div>
             </div>
             <div class="row">
               <input type="submit" value="Сохранить">
