--- a/numismatists/item.html
+++ b/numismatists/item.html
@@ -153,14 +153,14 @@
 
             <article class="item">
               <div class="img">
-                <div class="img">
+                <div class="full">
                 	<img src="img-6.jpg">
                 </div>
                 <div class="preview">
                   <ul>
-                    <li><img src="img-1.jpg"></li>
-                    <li><img src="img-2.jpg"></li>
-                    <li><img src="img-3.jpg"></li>
+                    <li><img src="img-7.jpg"></li>
+                    <li><img src="img-7.jpg"></li>
+                    <li><img src="img-7.jpg"></li>
                   </ul>
                 </div>
               </div>
