--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Главная</title>
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/new.css" rel="stylesheet">
   <link href="img/favicon.ico" rel="shortcut icon">
-  <link href=
-  'http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300&subset=latin,cyrillic-ext'
   rel='stylesheet' type='text/css'>
   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script src="js/script.js"></script>
@@ -98,7 +98,7 @@
     <div class="wrapper">
       <div class="content new">
         <section>
-          <h1>Настройки</h1>
+          <h1>Подать объявление</h1>
           <form action="#" class="new">
             <div class="row">
               <span>Название</span>
@@ -120,14 +120,19 @@
         </section>
 
         <aside>
-          <menu>
-            <ul>
-              <li>Настройки</li>
-              <li>Мои объявления</li>
-              <li>Кошелек</li>
-              <li>Магазин</li>
-            </ul>
-          </menu>
+          <p class="title">Популярные монеты</p>
+          <section class="popular">
+            <article class="item">
+              <div class="img"><img alt="" src="img-6.jpg"></div>
+              <div class="info">
+                <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
+                <p class="price">137 932 <span>&#8399;</span></p>
+                <div class="stars">
+                  <span></span><span></span><span></span><span></span><span></span>
+                </div>
+              </div>
+            </article>
+          </section>
         </aside> 
       </div>
       <footer>
