--- a/numismatists/new.html
+++ b/numismatists/new.html
@@ -125,13 +125,34 @@
             <article class="item">
               <div class="img"><img alt="" src="img-6.jpg"></div>
               <div class="info">
-                <a href="item.html" class="title">1 рубль 1705 года («Польский талер»)</a>
+                <a href="item.html" class="title">1 рубль 1705 года</a>
                 <p class="price">137 932 <span>&#8399;</span></p>
                 <div class="stars">
                   <span></span><span></span><span></span><span></span><span></span>
                 </div>
               </div>
             </article>
+            <article class="item">
+              <div class="img"><img alt="" src="img-5.jpg"></div>
+              <div class="info">
+                <a href="item.html" class="title">Двойной орел</a>
+                <p class="price">137 932 <span>&#8399;</span></p>
+                <div class="stars">
+                  <span></span><span></span><span></span><span></span><span></span>
+                </div>
+              </div>
+            </article>
+            <article class="item">
+              <div class="img"><img alt="" src="img-4.jpg"></div>
+              <div class="info">
+                <a href="item.html" class="title">Юбилейный доллар</a>
+                <p class="price">137 932 <span>&#8399;</span></p>
+                <div class="stars">
+                  <span></span><span></span><span></span><span></span><span></span>
+                </div>
+              </div>
+            </article>
+            <button>Посмотреть все</button>
           </section>
         </aside> 
       </div>
