--- a/numismatists/settings.html
+++ b/numismatists/settings.html
@@ -121,7 +121,7 @@
             <div class="row">
               <span>Город</span>
               <select name="city">
-                <option></option>
+                <option disabled selected>Выберите город</option>
                 <option>Москва</option>
                 <option>Санкт-Петербург</option>
                 <option>Чудово</option>
