option content 1 complete

--- a/numismatists/settings.html
+++ b/numismatists/settings.html
@@ -100,7 +100,7 @@
         <aside>
           <menu>
             <ul>
-              <li>Настройки</li>
+              <li class="active">Настройки</li>
               <li>Мои объявления</li>
               <li>Кошелек</li>
               <li>Магазин</li>
