--- a/numismatists/page.html
+++ b/numismatists/page.html
@@ -98,7 +98,12 @@
     <div class="wrapper">
       <div class="content page">
         <h1>Пользовательское соглашение</h1>
-        <p>Целью НК "Монеты+" <a href="new.html">новое объявление</a> и <a href="settings.html">настройки</a> и <a class="modal-enter" href="#">модальное окно "Войти"</a> и <a class="modal-reg" href="#">модальное окно "Регистрация"</a> является объединение нумизматов через существующие социальные сети для взаимовыгодного сотрудничества и творческого общения с единомышленниками. Мы представлены во всех популярных соцсетях, так что через удобную именно для вас социальную сеть присоединиться к нам может любой желающий. Мы не "накручиваем" количество участников в наших группах, т.к. нас интересуют только люди, реально увлекающиеся нумизматикой.<br><br>Интернет-магазин в соцсетях faceКонтакте - новый проект. Надеемся, что это будет удобно для многих пользователей.Целью НК "Монеты+" является объединение нумизматов через существующие социальные сети для взаимовыгодного сотрудничества</p>
+        <p>Целью НК "Монеты+" 
+        <a href="new.html">Подать объявление</a> и 
+        <a href="settings.html">Настройки</a> и 
+        <a class="modal-comm" href="#">модальное окно "Комментарий"</a> и 
+        <a class="modal-enter" href="#">модальное окно "Войти"</a> и 
+        <a class="modal-reg" href="#">модальное окно "Регистрация"</a> является объединение нумизматов через существующие социальные сети для взаимовыгодного сотрудничества и творческого общения с единомышленниками. Мы представлены во всех популярных соцсетях, так что через удобную именно для вас социальную сеть присоединиться к нам может любой желающий. Мы не "накручиваем" количество участников в наших группах, т.к. нас интересуют только люди, реально увлекающиеся нумизматикой.<br><br>Интернет-магазин в соцсетях faceКонтакте - новый проект. Надеемся, что это будет удобно для многих пользователей.Целью НК "Монеты+" является объединение нумизматов через существующие социальные сети для взаимовыгодного сотрудничества</p>
         <h2>Заголовок 2</h2>
         <p>Целью НК "Монеты+" является объединение нумизматов через существующие социальные сети для взаимовыгодного сотрудничества и творческого общения с единомышленниками. Мы представлены во всех популярных соцсетях, так что через удобную именно для вас социальную сеть присоединиться к нам может любой желающий. Мы не "накручиваем" количество участников в наших группах, т.к. нас интересуют только люди, реально увлекающиеся нумизматикой.</p>
         <h3>Заголовок 3</h3>
